# GlobalShoppingInsights

./: .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ADMIN_GUIDE.md  CLAUDE.md  DEVELOPER_GUIDE.md  Makefile  PIANO_CONSEGNA.md  README.md  RUNBOOK.md  USER_GUIDE.md  deploy.sh  docker-compose.ip.yml  docker-compose.prod.yml  docker-compose.yml  generate_doc.py  start.ps1  start.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  alembic.ini  docker-entrypoint.prod.sh  docker-entrypoint.sh  gsi.db-shm  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  seed.py
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 2026_04_20_4ea4ce5720fb_baseline_schema.py  2026_04_20_a44dfb48a9a0_add_indexes_content_hash_search_url.py  2026_04_22_c3f8a1b9d2e1_add_user_avatar_url.py  2026_04_29_b51c7e2a4d8a_add_article_published_title_excerpt.py
backend/app/: config.py  database.py  main.py
backend/app/api/: articles.py  audit_logs.py  auth.py  calendar.py  comments.py  dashboard.py  deps.py  export.py  health.py  notifications.py  prompt_folders.py  prompts.py  publish.py  search.py  settings.py  taxonomy.py  unsplash.py  users.py
backend/app/middleware/: request_id.py  security_headers.py
backend/app/models/: __init__.py  article.py  blacklist.py  calendar.py  comment.py  logs.py  notification.py  prompt.py  prompt_folder.py  refresh_token.py  search.py  taxonomy.py  user.py  wordpress.py
backend/app/schemas/: article.py  audit.py  calendar.py  comment.py  common.py  notification.py  prompt.py  prompt_folder.py  search.py  settings.py  taxonomy.py  user.py  wordpress.py
backend/app/services/: ai_service.py  auto_plan_service.py  discovery_service.py  gemini_service.py  llm_service.py  scraper_service.py  taxonomy_sync_service.py  wordpress_service.py
backend/app/utils/: admin_seed.py  audit.py  cache.py  circuit_breaker.py  encryption.py  html_utils.py  image_processing.py  logging.py  observability.py  pagination.py  rate_limit.py  reading_time.py  retry.py  security.py  text_utils.py  url_utils.py
backend/app/workers/: scheduler.py
backend/tests/: conftest.py  test_admin_seed.py  test_audit_log.py  test_auto_plan_service.py  test_circuit_breaker.py  test_config.py  test_database_engine.py  test_discovery_pipeline.py  test_encryption.py  test_gemini_service.py  test_health.py  test_image_processing.py  test_password_policy.py  test_rate_limit.py  test_rbac.py  test_reading_time.py  test_refresh_rotation.py  test_request_id.py  test_retry.py  test_security_headers.py  test_seed_idempotence.py  test_taxonomy_sync.py  test_wordpress_service.py  test_workflow_transitions.py  test_wp_password.py
deploy/logrotate/: gsi
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  eslint.config.js  index.html  nginx-gsi.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/assets/styles/: global.css  variables.css
frontend/src/components/common/: AvatarCropModal.tsx  CommandPalette.tsx  ConfirmModal.tsx  EmptyIllustrated.tsx  EmptyState.tsx  ErrorBoundary.tsx  ExportButton.tsx  ImagePickerModal.tsx  LLMStatusBanner.tsx  LoadingSpinner.tsx  LocaleSwitcher.tsx  PageHeader.tsx  PageTransition.tsx  PipelineFunnel.tsx  RelativeTime.tsx  RoleChip.tsx  SafeHTML.tsx  ScoreBadge.tsx  ShortcutsCheatsheet.tsx  SkeletonLoaders.tsx  Sparkline.tsx  StatusBadge.tsx  ThemeToggle.tsx  TypedConfirmModal.tsx
frontend/src/config/: constants.ts  permissions.ts  queryKeys.ts  routes.ts  theme.ts
frontend/src/hooks/: useBatchSelection.ts  useConfirmLogout.ts  useDebounce.ts  useKeyboardShortcut.ts  useTableParams.ts  useToast.ts
frontend/src/hooks/auth/: useAuth.ts  useCurrentUser.ts  usePermission.ts
frontend/src/hooks/queries/: useArticle.ts  useArticles.ts  useAuditLogs.ts  useCalendarSlots.ts  useComments.ts  useDashboardKPIs.ts  useHealth.ts  useJobLogs.ts  useMyProfile.ts  useNotifications.ts  usePromptFolders.ts  usePrompts.ts  usePublishJobs.ts  useSearchRuns.ts  useSettings.ts  useTaxonomy.ts  useUsers.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.ts  it.ts
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend/src/layouts/components/: AppHeader.tsx  AppSider.tsx  HeaderAvatar.tsx  HeaderSearchButton.tsx  NotificationBell.tsx  SidebarNavItem.tsx  SidebarUserCard.tsx  UserMenu.tsx
frontend/src/pages/admin/: SettingsPage.tsx
frontend/src/pages/article/: ArticleDetailPage.tsx
frontend/src/pages/auth/: LoginPage.tsx
frontend/src/pages/calendar/: CalendarPage.tsx  _CalendarPage.full.tsx
frontend/src/pages/dashboard/: AlertsPage.tsx  DashboardPage.tsx
frontend/src/pages/errors/: ForbiddenPage.tsx  NotFoundPage.tsx
frontend/src/router/: LazyPages.tsx  ProtectedRoute.tsx  RoleGuard.tsx  index.tsx
frontend/src/stores/: authStore.ts  calendarStore.ts  notificationStore.ts  uiStore.ts
frontend/src/test/: setup.ts
frontend/src/theme/: tokens.ts
frontend/src/types/: api.types.ts  article.types.ts  audit.types.ts  auth.types.ts  calendar.types.ts  comment.types.ts  index.ts  job.types.ts  notification.types.ts  prompt.types.ts  promptFolder.types.ts  revision.types.ts  search.types.ts  settings.types.ts  taxonomy.types.ts  user.types.ts  wordpress.types.ts
frontend/src/utils/: date.ts  errorToast.ts  permissions.ts  readingTime.ts  statusWorkflow.ts  url.ts
scripts/: README.md  backup.sh  restore.sh
test/Applicazioni dell'Intelligenza Artificiale Generativa nella CX/: risultati_EN.xlsx  risultati_ES.xlsx  risultati_FR.xlsx  risultati_IT.xlsx  risultati_JA.xlsx  risultati_ZH.xlsx
test/Ottimizzazione customer journey e conversioni/: risultati_EN.xlsx  risultati_ES.xlsx  risultati_FR.xlsx  risultati_IT.xlsx  risultati_JA.xlsx  risultati_ZH.xlsx
test/Trasformazione organizzativa customer-centric/: risultati_EN.xlsx  risultati_ES.xlsx  risultati_FR.xlsx  risultati_IT.xlsx  risultati_JA.xlsx  risultati_ZH.xlsx
(+81 files in other folders)
